# async_page_analyzer

./: .env.example  Makefile  README.md  celerybeat-schedule  database.sql  pyproject.toml
page_analyzer/: __init__.py  _utils.py  app.py  celery_config.py  model.py  tasks.py
page_analyzer/templates/: base.html  footer.html  index.html  url.html  urls.html
page_analyzer/templates/components/: flash.html  navbar.html
page_analyzer/templates/errors/: 404.html  500.html
